[build-system]
requires = ["setuptools>=64","wheel","setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/oauth_test/_version.py"

[project]
name = "oauth_test"
dependencies = ["requests","fastAPI","uvicorn","python-multipart","authlib","itsdangerous","httpx"]
dynamic = ["version"]

[project.scripts]
oauth_test = "oauth_test.serve:main"
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
oauth_test = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]

